# TestGit

./: .gitignore  README.md  commit_msg
Azure/: README.md  azure_rsa.pub
ExpressEx/: ExpressEx.sublime-workspace  app.js  package.json
NodeJs/: server.js
Python/: .gitignore  01. Python Basic Class.ipynb  02. Pandas GearVN.ipynb  02.DL for time series.ipynb  test.py
ReactJS/: Index.html  Main.js  package.json  start.sh  webpack.config.js
Source/: FireDetectorThread.cpp  FireDetectorThread.h  FireThread.cpp  FireThread.h  MainThread.cpp  MainThread.h  Makefile  ResultServerThread.cpp  ResultServerThread.h  ServerThread.cpp  ServerThread.h  client_msg.c  main.cpp  server_class.cpp  server_msg.c  test1.cpp
Stock/: Crawling Stock data.ipynb
codility_test/: plume.py  solution.sh  studies.xml
cxxtest/: Readme.MD  makefile
evsocket/: DataReceiveListener.h  DataReceiver.cpp  DataReceiver.h  EvSocket.cpp  EvSocket.h  EvSocketTest.cpp  EvTestClient.cpp  makefile
test/: EvSocket.cpp  EvSocket.h  EvSocketTest.cpp  basic_statistic.c  binary_tree.c  commit_msg  (+16 more)
test/interview_question/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  check_test1.cc  check_test2.cc  check_test3.cc  cmake_install.cmake  interview_question.7z
test/interview_question/Aug_2017/: TranTienLuc_Source.cpp
test/interview_question/include/: test1.h  test2.h
test/interview_question/src/: ptr_list_len.cpp
test/interview_question/test/: check_test1.h  check_test2.h  check_test3.h  ref_bug_fixing.cpp  ref_deepest_pit.cpp  ref_ptr_list_len.cpp  ref_test2.h  ref_test3.h
(+98 files in other folders)
